test/zinc_source/compile_errors/collections/02_float_set_element.zn
// expected-error: set element cannot be a float

fn main() {
    a = {1.0, 2.0}
}
